<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_scroll_to_top"
        android:icon="@drawable/ic_arrow_circle_up_white_24dp"
        app:showAsAction="always"
        android:title="@string/action_scroll_to_top"/>

    <item
        android:id="@+id/action_open_maps"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_scroll_to_top"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_settings"/>

</menu>