...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_toolbar"
        tools:context=".presentation.screens.home.ui.activity.HomeActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:visibility="gone" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
